shift H does not hide all at empty selection #61472

Closed
opened 2019-02-12 17:12:16 +01:00 by Fred Feuerstein · 6 comments

System Information
Operating system: Windows 7
Graphics card: GeForce 1060 6GB

Blender Version
Broken:
blender-2.80.0-git.036ec5cae4f7-windows64
Worked: (optional)
Blender 2.79 Release

Short description of error
pressing H correctly hides the selected vertices/objects. it does not hide anything
if nothing is selected, and it hides everything if everything is selected.

shift H should behave the other way around, but it does not hide anything if
nothing is selected. i would expect it to hide everything, and it does
that in blender 2.79.
partial selections work fine, though.

Exact steps for others to reproduce the error

  1. start blender, press alt-A to deselect all, press shift-H

same in edit mode, if no vertex is selected, shift-H does not hide anything.
however, in pose mode shift-H works fine, as it does in the video
sequenzer (shift-H mutes all if nothing is selected).

aside from those, i did not try out other modes/views.

cheers,
boogie

**System Information** Operating system: Windows 7 Graphics card: GeForce 1060 6GB **Blender Version** Broken: blender-2.80.0-git.036ec5cae4f7-windows64 Worked: (optional) Blender 2.79 Release **Short description of error** pressing H correctly hides the selected vertices/objects. it does not hide anything if nothing is selected, and it hides everything if everything is selected. shift H should behave the other way around, but it does not hide anything if nothing is selected. i would expect it to hide everything, and it does that in blender 2.79. partial selections work fine, though. **Exact steps for others to reproduce the error** 1. start blender, press alt-A to deselect all, press shift-H same in edit mode, if no vertex is selected, shift-H does not hide anything. however, in pose mode shift-H works fine, as it does in the video sequenzer (shift-H mutes all if nothing is selected). aside from those, i did not try out other modes/views. cheers, boogie

Added subscriber: @boogiwoogie

Added subscriber: @boogiwoogie
Campbell Barton was assigned by Sebastian Parborg 2019-02-12 17:21:38 +01:00

Added subscribers: @WilliamReynish, @dfelinto

Added subscribers: @WilliamReynish, @dfelinto

@WilliamReynish I think consistent should be pursuit here. Super low priority bug, but which way do you think we should go? Any idea why things changed since 2.7x?

@WilliamReynish I think consistent should be pursuit here. Super low priority bug, but which way do you think we should go? Any idea why things changed since 2.7x?

If Shift-H means "hide all unselected", then if nothing is selected, it follows that it should hide everything

If Shift-H means "hide all unselected", then if nothing is selected, it follows that it should hide everything

This issue was referenced by c6cbcf83d0

This issue was referenced by c6cbcf83d0153922ac32452c198252f44867a6cb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61472
No description provided.