Fix T61472: Hide Unselected fails w/ no selection

Also skip mesh recalculation when no hide/reveal is performed.