source/blender/editors/uvedit/uvedit_ops.c
@@ -4113,9 +4113,9 @@ static int uv_hide_exec(bContext *C, wmOperator *op)
 	const int cd_loop_uv_offset  = CustomData_get_offset(&em->bm->ldata, CD_MLOOPUV);
 
 	if (ts->uv_flag & UV_SYNC_SELECTION) {
-		EDBM_mesh_hide(em, swap);
-		EDBM_update_generic(em, true, false);
-
+		if (EDBM_mesh_hide(em, swap)) {
+			EDBM_update_generic(em, true, false);
+		}
 		return OPERATOR_FINISHED;
 	}
 
@@ -4236,9 +4236,9 @@ static int uv_reveal_exec(bContext *C, wmOperator *op)
 
 	/* call the mesh function if we are in mesh sync sel */
 	if (ts->uv_flag & UV_SYNC_SELECTION) {
-		EDBM_mesh_reveal(em, select);
-		EDBM_update_generic(em, true, false);
-
+		if (EDBM_mesh_reveal(em, select)) {
+			EDBM_update_generic(em, true, false);
+		}
 		return OPERATOR_FINISHED;
 	}
 	if (use_face_center) {
